# SynthDNA-Lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/static/: script.js  style.css
synthdna_lab/: __init__.py  config.py  error_injector.py  pipeline.py  secondary_structure.py  sequence_generator.py  trace_generator.py
synthdna_lab/web/: __init__.py  app.py
synthdna_lab/web/static/: script.js
synthdna_lab/web/templates/: index.html
tests/: test_pipeline.py
