[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthdna-lab"
version = "1.0.0"
description = "Multi-vendor physically-grounded synthetic DNA dataset generator for DNA data storage research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yacine Baghli"}
]
keywords = [
    "DNA synthesis",
    "synthetic biology",
    "DNA data storage",
    "noise modeling",
    "bioinformatics",
    "trace reconstruction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "flask>=3.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Repository = "https://github.com/YacineBaghli/SynthDNA-Lab"

[project.scripts]
synthdna-lab = "synthdna_lab.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthdna_lab*"]
